alteração na cor do button

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1 {
 
 button {
     background-color: blueviolet;
-    color: #fff;
+    color: blue;
     border: none;
     border-radius: 30px;
 }
