--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
-h1 {
-    color: red;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+
 button {
-    background-color: blueviolet;
-    color: blue;
+    background-color: red;
+    padding: 20px;
     border: none;
     border-radius: 30px;
+    margin-top: 50px;
+    margin-left: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+}
+
+button:hover {
+    background-color: blue;
+    color: #fff;
 }
